* dmg package building apparently takes too much time * win?